--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
     "react": "18.2.0",
